--- a/.atomist.yml
+++ b/.atomist.yml
@@ -34,3 +34,21 @@ editor:
     - "follower": "foodtruck"
     - "featureName": "SpringBoot.Structure"
 
+---
+kind: "operation"
+client: "com.atomist:rug"
+version: "1.0.0-20170809213747"
+editor:
+  name: "AddFeatureFollowerEditor"
+  group: "atomist"
+  artifact: "spring-team-handlers"
+  version: "0.9.1"
+  origin:
+    repo: "git@github.com:atomisthq/spring-team-handlers.git"
+    branch: "cef70139861a3dfc5cd1721fb0bc51903afed0f6"
+    sha: "cef7013"
+  parameters:
+    - "broadcaster": "spring-rest-seed"
+    - "follower": "nugget"
+    - "featureName": "SpringBoot.Structure"
+
