--- a/.atomist.yml
+++ b/.atomist.yml
@@ -106,3 +106,21 @@ editor:
     - "follower": "goat"
     - "featureName": "SpringBoot.Structure"
 
+---
+kind: "operation"
+client: "com.atomist:rug"
+version: "1.0.0-20170816122823"
+editor:
+  name: "AddFeatureFollowerEditor"
+  group: "atomist"
+  artifact: "spring-team-handlers"
+  version: "0.9.3"
+  origin:
+    repo: "git@github.com:atomisthq/spring-team-handlers.git"
+    branch: "9aff96a9b3ffc5a8533b87128793739cd952e863"
+    sha: "9aff96a"
+  parameters:
+    - "broadcaster": "spring-rest-seed"
+    - "follower": "donkey"
+    - "featureName": "SpringBoot.Structure"
+
